# matrix_lab_rover_above

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ArUco_detector/: README.md  aruco_pose_estimator.py  aruco_pose_stream.py  camera_stream.py
ArUco_detector/calibration/: calibration_chessboard.yaml  coolest_calibrator.py
LLM_hybrid/: README.md  llm_chat.py  llm_driver.py  object_identifier.py
YOLO_agent/: README.md  YOLO_extractor.py  depth_client.py  depth_server.py  requirements_depth_server.txt  yolo_pose_estimator.py  yolov8n_esp32_example.py  yolov8n_pose_example.py
YOLO_agent/examples/: yolov8n_local_example.py
depth_anything_server/: README.md  depth_client.py  depth_server.py
depth_anything_server/examples/: depth_map_local_camera.py  local_yolo_distance_estimator.py  simple_client_server_example.py
depth_anything_server/resources/: Depth Anything Server Architecture.drawio
memory/: MEMORY.md  project_15rover_network.md
rover_control/: README.md  conversions.py  encoder_poller.py  network_interface.py  pid.py  rover.py  run_logger.py
rover_control/examples/: analyze_log.py  aruco_maze_runner.py  aruco_maze_runner_trapezoid.py  aruco_pose_movement.py  aruco_tag_tracker.py  da3_object_movement.py  encoder_readout.py  manual_control.py  rover_yolo_estimator.py  simple_api_demo.py  yolo_object_movement.py
