[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rover-high-level"
version = "0.1.0"
description = "High-level AI agent code (ArUco tracking, YOLO detection, LLM hybrid, rover control) for the STEM Rovers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "ollama",
    "opencv-contrib-python",
    "pillow",
    "pynput",
    "requests",
    "transformers",
    "ultralytics",
]

[tool.setuptools]
packages = ["ArUco_detector", "LLM_hybrid", "YOLO_agent", "rover_control"]
